Added task scheduler.

--- a/stm32/Makefile
+++ b/stm32/Makefile
@@ -29,6 +29,7 @@ src/stm32h7xx_it.c \
 src/system_stm32h7xx.c \
 src/trf_clock.c \
 src/trf_system.c \
+src/trf_scheduler.c \
 hal/src/stm32h7xx_hal_cortex.c \
 hal/src/stm32h7xx_hal_rcc.c \
 hal/src/stm32h7xx_hal_rcc_ex.c \
