enable soft floating point instructions

--- a/stm32/Makefile
+++ b/stm32/Makefile
@@ -87,10 +87,10 @@ BIN = $(CP) -O binary -S
 CPU = -mcpu=cortex-m7
 
 # fpu
-FPU = -mfpu=fpv5-d16
+FPU = -mfpu=auto
 
 # float-abi
-FLOAT-ABI = -mfloat-abi=hard
+FLOAT-ABI = -mfloat-abi=soft
 
 # mcu
 MCU = $(CPU) -mthumb $(FPU) $(FLOAT-ABI)
